# bli

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: pull_request_allow_review.yaml
bli/: __init__.py  cli.py  client.py  config.py  session.py
